# cell-simulator-x

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  PRD.md
.claude/agents/: biochemistry-advisor.md  gpu-optimization.md  physics-reviewer.md
.claude/commands/: benchmark.md  cite.md  parameter.md  phase.md  validate.md
.claude/skills/: gpu-compute.md  membrane-mechanics.md  rbc-biochemistry.md  scientific-validation.md
benches/: geometry.rs
crates/rbc-validation-suite/: Cargo.toml
crates/rbc-validation-suite/src/: lib.rs  metrics.rs  reference_curve.rs
crates/rbc-validation-suite/src/experiments/: dao_2003.rs  fischer_2007.rs  imai_1981.rs  mod.rs  mulquiney_1999.rs  rief_1999.rs  skalak_1973.rs  waugh_evans_1979.rs
crates/rbc-validation-suite/src/fitting/: mod.rs  sensitivity.rs
data/parameters/: geometry.json  glycolysis.json  hemoglobin.json  membrane.json  rapoport_luebering.json
data/parameters/disease/: diabetic.json  malaria.json  sickle_cell.json  storage_lesion.json
docs/: DEVELOPMENT.md  USER_MANUAL.md  headline_figures.md  methods.md  phase_10_5_notes.md  phase_11_0_notes.md  phase_11_2_a_notes.md  phase_11_2_c_notes.md  phase_11_2_d_notes.md  phase_11_2_e_notes.md  phase_11_3_notes.md  phase_11_4_notes.md  phase_11_5_notes.md  phase_12_notes.md  phase_14_d_notes.md  phase_14_notes.md  phase_c_hybrid_notes.md  validation_report_v1.md
scripts/figures/: figure1_storage.py  figure2a_additive.py  figure2b_sensitivity.py  figure3_tank_treading.py  figure4_parachute.py  figure5_splenic_transit.py
shaders/: cell.wgsl
shaders/compute/: biochem_full.wgsl  biochem_glycolysis.wgsl  dpd.wgsl  integrator.wgsl  physics_step.wgsl  skalak.wgsl  vec_add.wgsl  wlc.wgsl
src/: lib.rs  main.rs
src/biochemistry/: enzyme.rs  full_integration.rs  glutathione.rs  glycolysis.rs  hemoglobin.rs  integration.rs  integrator.rs  ion_homeostasis.rs  mod.rs  pentose_phosphate.rs  ph_buffer.rs  piezo1.rs  rapoport_luebering.rs  redox.rs
src/biochemistry/disease/: diabetic.rs  malaria.rs  mod.rs  sickle_cell.rs  storage_lesion.rs
src/compute/: biochem.rs  diagnostics.rs  mod.rs  physics.rs
src/config/: mod.rs  parameters.rs
src/coupling/: coupled_solver.rs  mod.rs  spectrin_modulator.rs  tension_computer.rs
src/export/: csv_export.rs  json_export.rs  mod.rs  screenshot.rs
src/flow/: mod.rs  poiseuille.rs  slit.rs
src/geometry/: fung_tong.rs  mesh.rs  mod.rs  spectrin.rs
src/physics/: dpd.rs  integrator.rs  membrane.rs  mod.rs  wlc.rs
src/render/: camera.rs  mod.rs  pipeline.rs
src/render/hud/: mod.rs  panels.rs  state.rs  theme.rs  widgets.rs
src/state/: biochemistry.rs  cell.rs  environment.rs  metrics.rs  mod.rs  physics.rs
src/storage/: additive.rs  mod.rs  sensitivity.rs  simulator.rs  transit.rs
src/validation/: metrics.rs  mod.rs
src/validation/experiments/: dao_2003.rs  fischer_2007.rs  imai_1981.rs  mod.rs  mulquiney_1999.rs  rief_1999.rs  skalak_1973.rs  waugh_evans_1979.rs
src/validation/fitting/: identifiability.rs
src/world/: backend.rs  cell.rs  mod.rs
tests/: biochem_gpu_full_parity.rs  biochem_gpu_full_solver_parity.rs  biochem_gpu_hb_parity.rs  biochem_gpu_parity.rs  compute_context_shared.rs  coupling_tests.rs  disease_tests.rs  dpd_gpu_parity.rs  flow_cpu_gpu_parity.rs  flow_deformation.rs  headline_validation_csvs.rs  integration_tests.rs  ion_tests.rs  mechanics_tests.rs  metabolism_tests.rs  oxygen_tests.rs  physics_backend_parity.rs  physics_external_forces_parity.rs  redox_tests.rs  skalak_gpu_parity.rs  splenic_transit_sweep.rs  storage_additive_comparator.rs  storage_curve.rs  storage_replay_parity.rs  storage_sensitivity.rs  storage_supercooled.rs  validation_suite.rs  verlet_gpu_parity.rs  wlc_gpu_parity.rs  world_flow.rs  world_tests.rs
