[package]
name = "cell-simulator-x"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated human red blood cell simulation engine"
license = "MIT"

[dependencies]
# GPU rendering
wgpu = "0.19"
winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }

# Linear algebra
glam = "0.25"
nalgebra = "0.32"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime (required by wgpu)
pollster = "0.3"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "geometry"
harness = false

[profile.release]
lto = true
codegen-units = 1
