[package]
name = "cell-simulator-x"
version = "1.0.0"
edition = "2021"
description = "GPU-accelerated human red blood cell simulation engine"
license = "MIT"

[dependencies]
# GPU rendering
wgpu = "0.20"
winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }

# Linear algebra
glam = "0.25"
nalgebra = "0.32"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime (required by wgpu)
pollster = "0.3"

# Logging
log = "0.4"
env_logger = "0.11"

# Physics simulation
rand = "0.8"           # Random forces for DPD
rand_distr = "0.4"     # Normal distribution for thermal fluctuations
rayon = "1.10"         # CPU parallelization for force calculations

# GUI/HUD overlay
egui = "0.28"
egui-wgpu = "0.28"
egui-winit = "0.28"

# Export (screenshots, CSV, JSON)
image = { version = "0.25", default-features = false, features = ["png"] }
csv = "1.3"
chrono = { version = "0.4", features = ["clock"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "geometry"
harness = false

[profile.release]
lto = true
codegen-units = 1
