[package]
name = "rbc-validation-suite"
version = "0.1.0"
edition = "2021"
description = "Empirical-validation harness for cell-simulator-x: published-curve fits to Imai 1981, Mulquiney 1999, Rief 1999, Waugh-Evans 1979, Dao 2003, Fischer 2007, Skalak 1973."
license = "MIT OR Apache-2.0"

[dependencies]
cell-simulator-x = { path = "../.." }

# Serialization for ValidationCurve, ValidationReport, FitMetrics.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Reference-curve CSV loader in `reference_curve.rs`.
csv = "1.3"

# Timestamp generation for ValidationReport.
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Sensitivity sweep RNG (`fitting/sensitivity.rs`).
rand = "0.8"
